Fix #125: Documentation update
- Include korrel8rcli
- Fix structure outdated install/use docs.
