# pkg/rest/docs/swagger.json
@@ -190,6 +190,24 @@
                 "type": "string"
             }
         },
+        "Constraint": {
+            "description": "Constraint constrains the objects that will be included in search results.",
+            "type": "object",
+            "properties": {
+                "end": {
+                    "description": "End of time interval to include.",
+                    "type": "string"
+                },
+                "limit": {
+                    "description": "Limit number of objects returned per query.",
+                    "type": "integer"
+                },
+                "start": {
+                    "description": "Start of time interval to include.",
+                    "type": "string"
+                }
+            }
+        },
         "Domain": {
             "description": "Domain configuration information.",
             "type": "object",
@@ -340,7 +358,7 @@
                     "type": "string"
                 },
                 "constraint": {
-                    "$ref": "#/definitions/rest.Constraint"
+                    "$ref": "#/definitions/Constraint"
                 },
                 "objects": {
                     "description": "Objects of `class` serialized as JSON",
@@ -360,24 +378,6 @@
             "type": "object",
             "additionalProperties": {
                 "type": "string"
-            }
-        },
-        "rest.Constraint": {
-            "description": "Constraint constrains the objects that will be included in search results.",
-            "type": "object",
-            "properties": {
-                "end": {
-                    "description": "End of time interval to include.",
-                    "type": "string"
-                },
-                "limit": {
-                    "description": "Limit number of objects returned per query.",
-                    "type": "integer"
-                },
-                "start": {
-                    "description": "Start of time interval to include.",
-                    "type": "string"
-                }
             }
         }
     }
